<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/slide1"
    android:fitsSystemWindows="true"
    tools:context="com.nhubnigeria.engineering.psirs.activity.PasswordReset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/image_marginBottom"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding"
            android:text="@string/lbl_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_marginBottom"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tv_txtSize" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/holo_red_light">

            <EditText
                android:id="@+id/phoneReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tv_marginBottom"
                android:layout_marginTop="@dimen/et_marginTop"
                android:drawablePadding="@dimen/drawablePad"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:background="@android:color/holo_red_light"
            android:text="@string/btn_reset_password"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/progressBar_marginTop"
        android:backgroundTint="@android:color/white"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_red_dark"
        android:max="11"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>
