<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slide1"
    tools:context="com.nhubnigeria.engineering.psirs.activity.Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/psirs_logo"
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/psirs_logo"
        android:layout_marginTop="@dimen/phone_marginTop"
        android:background="@drawable/phone_border"
        android:drawablePadding="@dimen/phone_drawPadding"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLength="11"
        android:padding="@dimen/body_paddingLogin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUserName"
        android:layout_marginTop="@dimen/body_marginTopLogin"
        android:background="@drawable/password_border"
        android:drawablePadding="@dimen/phone_drawPadding"
        android:drawableStart="@drawable/ic_key"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/body_paddingLogin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="@dimen/body_marginTopLogin"
        android:background="@drawable/password_border"
        android:drawablePadding="@dimen/phone_drawPadding"
        android:drawableStart="@drawable/ic_key"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/body_paddingLogin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="@dimen/body_marginTopLogin"
        android:background="@drawable/password_border"
        android:drawablePadding="@dimen/phone_drawPadding"
        android:drawableStart="@drawable/ic_key"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_second_password"
        android:inputType="textPassword"
        android:padding="@dimen/body_paddingLogin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/password_border"
            android:padding="@dimen/body_paddingLogin"
            android:drawablePadding="@dimen/phone_drawPadding"></Spinner>

    </ScrollView>

</RelativeLayout>
